deploy: fcperni/blog@f3f792a0e66d1c9558795be3828d6c012c5ce051

--- a/index.html
+++ b/index.html
@@ -151,7 +151,23 @@ Manual
 <main role=main class=container>
 <div class="row content">
 <div class=col-lg-8>
-<div class=container><div class="posts mb-4"></div><div class="row table-responsive mb-3"></div>
+<div class=container><div class="posts mb-4"><article class="row card post component">
+<div class=card-body>
+<h2 class="card-title post-title"><a href=/posts/joincsv/>JoinCsv
+</a></h2><div class=post-meta><span class=post-date title="created on">
+<i class="fas fa-fw fa-calendar-alt"></i>Oct 26, 2021
+</span><span class=post-reading-time title="reading time">
+<i class="fas fa-fw fa-coffee"></i>1 min read
+</span></div>
+<div class=post-summary>
+This was my first utility written in Python, when I was learning the basics before going deep into the Databricks world.
+This program will join all the csv files of a folder in a single one.
+Default folder is &ldquo;csv&rdquo; and default output file is &ldquo;joined.csv&rdquo;.
+Available options:
+1 -h --help Display …
+</div>
+</div>
+</article></div><div class="row table-responsive mb-3"></div>
 </div>
 </div><aside class="col-lg-4 sidebar d-flex">
 <div class=container>
@@ -165,7 +181,8 @@ Manual
 <section class="recent-posts row card component">
 <div class=card-body>
 <h2 class=card-title>Recent Posts</h2>
-<ul></ul>
+<ul><li><a href=/posts/joincsv/>JoinCsv
+</a></li></ul>
 </div>
 </section>
 </div>
