deploy: fcperni/blog@a6c579eb37f4736ea400112996f5ee1a5c3d01f2

--- a/about/index.html
+++ b/about/index.html
@@ -184,7 +184,7 @@ Manual
 <i class="fas fa-fw fa-chevron-right"></i>
 </div></div></div>
 </article><div class="card component row post-comments">
-<div class=card-body><script src=https://utteranc.es/client.js repo=razonyang/hugo-theme-bootstrap-comments issue-term=pathname label=comment theme=github-light crossorigin=anonymous async></script></div>
+<div class=card-body></div>
 </div></div>
 </div><aside class="col-lg-4 sidebar d-flex">
 <div class=container>
@@ -220,6 +220,6 @@ Copyright © 2016-2021. All Rights Reserved.
 <div class="powered-by mb-2">
 Powered by <a href=https://gohugo.io target=_blank rel="noopener noreferrer">Hugo</a> and the <a href=https://github.com/razonyang/hugo-theme-bootstrap target=_blank rel="noopener noreferrer">Bootstrap</a> theme.
 </div></footer>
-<script src=/js/bundle.min.ff86187495d811f9ac53ffd5a4f5e354a1d40eae69710942f01287b2b63e20c6.js integrity="sha256-/4YYdJXYEfmsU//VpPXjVKHUDq5pcQlC8BKHsrY+IMY=" crossorigin=anonymous defer></script><script defer src=/js/viewer.min.2f6511f1e2b87cdacb7bdeedeadc1dcf2fc9f22db69f89b70fd5d91224f892a4.js integrity="sha256-L2UR8eK4fNrLe97t6twdzy/J8i22n4m3D9XZEiT4kqQ=" crossorigin=anonymous></script>
+<script src=/js/bundle.min.1f63278219b42b88861610ffaa2311d5551098031be3715ff1f0473a20b05625.js integrity="sha256-H2Mnghm0K4iGFhD/qiMR1VUQmAMb43Ff8fBHOiCwViU=" crossorigin=anonymous defer></script><script defer src=/js/viewer.min.2f6511f1e2b87cdacb7bdeedeadc1dcf2fc9f22db69f89b70fd5d91224f892a4.js integrity="sha256-L2UR8eK4fNrLe97t6twdzy/J8i22n4m3D9XZEiT4kqQ=" crossorigin=anonymous></script>
 </body>
 </html>
