deploy: fcperni/blog@cb697642f435f521efaf1990fd8918286fed4d26

--- a/about/index.html
+++ b/about/index.html
@@ -198,7 +198,8 @@ Manual
 <section class="recent-posts row card component">
 <div class=card-body>
 <h2 class=card-title>Recent Posts</h2>
-<ul><li><a href=/posts/joincsv/>JoinCsv
+<ul><li><a href=/posts/data-visualization/>Data Visualization
+</a></li><li><a href=/posts/joincsv/>JoinCsv
 </a></li></ul>
 </div>
 </section>
