--- a/index.html
+++ b/index.html
@@ -153,6 +153,18 @@ Manual
 <div class=col-lg-8>
 <div class=container><div class="posts mb-4"><article class="row card post component">
 <div class=card-body>
+<h2 class="card-title post-title"><a href=/posts/data-visualization/>Data Visualization
+</a></h2><div class=post-meta><span class=post-date title="created on">
+<i class="fas fa-fw fa-calendar-alt"></i>Nov 15, 2021
+</span><span class=post-reading-time title="reading time">
+<i class="fas fa-fw fa-coffee"></i>1 min read
+</span></div>
+<div class=post-summary>
+Data Visualization with Power BI (netcoreconf 2021) We live in the era of data. We are surrounded by data. There are tons of tools, methodologies, software, processes, etc. to extract, transform and load from just a couple or records to even tens of millions of records. But what about after all that? How can we make so …
+</div>
+</div>
+</article><article class="row card post component">
+<div class=card-body>
 <h2 class="card-title post-title"><a href=/posts/joincsv/>JoinCsv
 </a></h2><div class=post-meta><span class=post-date title="created on">
 <i class="fas fa-fw fa-calendar-alt"></i>Oct 26, 2021
@@ -181,7 +193,8 @@ Available options:
 <section class="recent-posts row card component">
 <div class=card-body>
 <h2 class=card-title>Recent Posts</h2>
-<ul><li><a href=/posts/joincsv/>JoinCsv
+<ul><li><a href=/posts/data-visualization/>Data Visualization
+</a></li><li><a href=/posts/joincsv/>JoinCsv
 </a></li></ul>
 </div>
 </section>
