--- a/about/index.html
+++ b/about/index.html
@@ -198,7 +198,8 @@ Manual
 <section class="recent-posts row card component">
 <div class=card-body>
 <h2 class=card-title>Recent Posts</h2>
-<ul><li><a href=/posts/data-visualization/>Data Visualization
+<ul><li><a href=/posts/data-storytelling/>Data Storytelling With Power BI
+</a></li><li><a href=/posts/data-visualization/>Data Visualization With Power BI
 </a></li><li><a href=/posts/joincsv/>JoinCsv
 </a></li></ul>
 </div>
