deploy: fcperni/blog@2a70d077bb6d0e681671a9a382fa5caff55b3c9b

--- a/about/index.html
+++ b/about/index.html
@@ -203,6 +203,38 @@ Manual
 </a></li><li><a href=/posts/joincsv/>JoinCsv
 </a></li></ul>
 </div>
+</section><section class="taxonomies row card component">
+<div class=card-body>
+<h2 class=card-title>
+<a href=/categories>Categories</a>
+</h2>
+<div><a href=/categories/conferences/ class="badge bg-primary text-white rounded post-taxonomy" title=Conferences>
+Conferences
+</a><a href=/categories/pet-projects/ class="badge bg-primary text-white rounded post-taxonomy" title="Pet Projects">
+Pet Projects
+</a></div>
+</div>
+</section><section class="taxonomies row card component">
+<div class=card-body>
+<h2 class=card-title>
+<a href=/tags>Tags</a>
+</h2>
+<div><a href=/tags/data/ class="badge bg-primary text-white rounded post-taxonomy" title=Data>
+Data
+</a><a href=/tags/power-bi/ class="badge bg-primary text-white rounded post-taxonomy" title="Power BI">
+Power BI
+</a><a href=/tags/csv/ class="badge bg-primary text-white rounded post-taxonomy" title=CSV>
+CSV
+</a><a href=/tags/data-visualization/ class="badge bg-primary text-white rounded post-taxonomy" title="Data Visualization">
+Data Visualization
+</a><a href=/tags/python/ class="badge bg-primary text-white rounded post-taxonomy" title=Python>
+Python
+</a><a href=/tags/storytelling/ class="badge bg-primary text-white rounded post-taxonomy" title=Storytelling>
+Storytelling
+</a><a href=/tags/utilities/ class="badge bg-primary text-white rounded post-taxonomy" title=Utilities>
+Utilities
+</a></div>
+</div>
 </section>
 </div>
 </aside>
