deploy: fcperni/blog@5fde8e578243205326007fd739b3ccd82044f90d

--- a/es/index.html
+++ b/es/index.html
@@ -63,7 +63,7 @@
 <div class="col-auto ms-auto">
 <div class=dropdown>
 <a class="btn btn-sm btn-outline-primary dropdown-toggle" href=# id=languageDropdown role=button data-bs-toggle=dropdown aria-expanded=false>
-Français
+Spanish
 </a>
 <ul class="dropdown-menu dropdown-menu-end" aria-labelledby=languageDropdown><li><a class=dropdown-item href=/>English</a></li></ul>
 </div>
@@ -119,7 +119,7 @@ Français
 <i class="fas fa-fw fa-chevron-circle-down"></i>Dropdown
 </a>
 <ul class=dropdown-menu aria-labelledby=navbarDropdown-dropdown><li>
-<a class=dropdown-item href=https://github.com/fcperni/hugo-theme-bootstrap target=_blank rel="noopener noreferrer">
+<a class=dropdown-item href=https://github.com/fcperni/ target=_blank rel="noopener noreferrer">
 <i class="fab fa-fw fa-github"></i>Github
 </a>
 </li></ul>
