deploy: fcperni/blog@505c2d3ed7993b459291ac21b620f7b6addb1076

--- a/es/404.html
+++ b/es/404.html
@@ -113,7 +113,23 @@ Spanish
 <input class="form-control rounded-pill" name=q type=search aria-label=Search>
 </div>
 </form>
-<ul class="navbar-nav ms-auto"><li class="nav-item dropdown">
+<ul class="navbar-nav ms-auto"><li class=nav-item>
+<a class=nav-link href=/es/archives/>
+<i class="fas fa-fw fa-file-archive"></i>Archives
+</a>
+</li><li class=nav-item>
+<a class=nav-link href=/es/categories/>
+<i class="fas fa-fw fa-folder"></i>Categories
+</a>
+</li><li class=nav-item>
+<a class=nav-link href=/es/tags/>
+<i class="fas fa-fw fa-tags"></i>Tags
+</a>
+</li><li class=nav-item>
+<a class=nav-link href=/es/series/>
+<i class="fas fa-fw fa-columns"></i>Series
+</a>
+</li><li class="nav-item dropdown">
 <a class=nav-link id=navbarDropdown-dropdown role=button data-bs-toggle=dropdown aria-expanded=false>
 <i class="fas fa-fw fa-chevron-circle-down"></i>Dropdown
 </a>
