--- a/es/index.html
+++ b/es/index.html
@@ -114,7 +114,23 @@ Spanish
 <input class="form-control rounded-pill" name=q type=search aria-label=Search>
 </div>
 </form>
-<ul class="navbar-nav ms-auto"><li class="nav-item dropdown">
+<ul class="navbar-nav ms-auto"><li class=nav-item>
+<a class=nav-link href=/es/archives/>
+<i class="fas fa-fw fa-file-archive"></i>Archives
+</a>
+</li><li class=nav-item>
+<a class=nav-link href=/es/categories/>
+<i class="fas fa-fw fa-folder"></i>Categories
+</a>
+</li><li class=nav-item>
+<a class=nav-link href=/es/tags/>
+<i class="fas fa-fw fa-tags"></i>Tags
+</a>
+</li><li class=nav-item>
+<a class=nav-link href=/es/series/>
+<i class="fas fa-fw fa-columns"></i>Series
+</a>
+</li><li class="nav-item dropdown">
 <a class=nav-link id=navbarDropdown-dropdown role=button data-bs-toggle=dropdown aria-expanded=false>
 <i class="fas fa-fw fa-chevron-circle-down"></i>Dropdown
 </a>
@@ -131,7 +147,51 @@ Spanish
 <main role=main class=container>
 <div class="row content">
 <div class=col-lg-8>
-<div class=container><div class="posts mb-4"></div><div class="row table-responsive mb-3"></div>
+<div class=container><div class="posts mb-4"><article class="row card post component">
+<div class=card-body>
+<h2 class="card-title post-title"><a href=/es/posts/data-storytelling/>Data Storytelling With Power BI
+</a></h2><div class=post-meta><span class=post-date title="created on">
+<i class="fas fa-fw fa-calendar-alt"></i>15-11-2021
+</span><span class=post-reading-time title="reading time">
+<i class="fas fa-fw fa-coffee"></i>1 min read
+</span><a href=/es/categories/conferences/ class="badge rounded-pill text-white bg-primary post-taxonomy">Conferences</a><a href=/es/tags/data/ class="badge rounded-pill text-white bg-primary post-taxonomy">Data</a><a href=/es/tags/power-bi/ class="badge rounded-pill text-white bg-primary post-taxonomy">Power BI</a><a href=/es/tags/storytelling/ class="badge rounded-pill text-white bg-primary post-taxonomy">Storytelling</a></div>
+<div class=post-summary>
+To Be Translated
+There are many tools for creating data visualizations, but one of the most common used and powerful is Power BI.
+In the previous edition we learned how to create effective visualizations in Power BI to display insights existing on data, showing information extracted from logs recorded in App Insights …
+</div>
+</div>
+</article><article class="row card post component">
+<div class=card-body>
+<h2 class="card-title post-title"><a href=/es/posts/data-visualization/>Data Visualization With Power BI
+</a></h2><div class=post-meta><span class=post-date title="created on">
+<i class="fas fa-fw fa-calendar-alt"></i>15-11-2021
+</span><span class=post-reading-time title="reading time">
+<i class="fas fa-fw fa-coffee"></i>1 min read
+</span><a href=/es/categories/conferences/ class="badge rounded-pill text-white bg-primary post-taxonomy">Conferences</a><a href=/es/tags/data/ class="badge rounded-pill text-white bg-primary post-taxonomy">Data</a><a href=/es/tags/power-bi/ class="badge rounded-pill text-white bg-primary post-taxonomy">Power BI</a><a href=/es/tags/data-visualization/ class="badge rounded-pill text-white bg-primary post-taxonomy">Data Visualization</a></div>
+<div class=post-summary>
+To Be Translated
+We live in the era of data. We are surrounded by data. There are tons of tools, methodologies, software, processes, etc. to extract, transform and load from just a couple or records to even tens of millions of records. But what about after all that? How can we make so much data usable? The key is to …
+</div>
+</div>
+</article><article class="row card post component">
+<div class=card-body>
+<h2 class="card-title post-title"><a href=/es/posts/joincsv/>JoinCsv
+</a></h2><div class=post-meta><span class=post-date title="created on">
+<i class="fas fa-fw fa-calendar-alt"></i>26-10-2021
+</span><span class=post-reading-time title="reading time">
+<i class="fas fa-fw fa-coffee"></i>1 min read
+</span><a href=/es/categories/proyectos-personales/ class="badge rounded-pill text-white bg-primary post-taxonomy">Proyectos Personales</a><a href=/es/tags/data/ class="badge rounded-pill text-white bg-primary post-taxonomy">Data</a><a href=/es/tags/python/ class="badge rounded-pill text-white bg-primary post-taxonomy">Python</a><a href=/es/tags/csv/ class="badge rounded-pill text-white bg-primary post-taxonomy">CSV</a><a href=/es/tags/utilidades/ class="badge rounded-pill text-white bg-primary post-taxonomy">Utilidades</a></div>
+<div class=post-summary>
+To Be Translated
+This was my first utility written in Python, when I was learning the basics before going deep into the Databricks world.
+This program will join all the csv files of a folder in a single one.
+Default folder is &ldquo;csv&rdquo; and default output file is &ldquo;joined.csv&rdquo;.
+Available options:
+1 -h …
+</div>
+</div>
+</article></div><div class="row table-responsive mb-3"></div>
 </div>
 </div><aside class="col-lg-4 sidebar d-flex">
 <div class=container>
@@ -139,13 +199,48 @@ Spanish
 <div class=card-body>
 <div class="col-12 d-flex align-items-center justify-content-center"><img class="profile-avatar rounded-circle" alt="Francisco Cruzado Perni" src=/images/profile.webp loading=lazy width=400 height=400>
 </div>
-<div class="col-12 profile-meta"><div class=profile-name>Francisco Cruzado Perni</div><div class=profile-bio>Associate Professor in Data Visualization & Development Architect</div><div class=profile-company><i class="fas fa-fw fa-building"></i>IE University & Analyticalways</div><div class=profile-location><i class="fas fa-fw fa-map-marker-alt"></i>Alonsotegi</div></div>
+<div class="col-12 profile-meta"><div class=profile-name>Francisco Cruzado Perni</div><div class=profile-bio>Associate Professor in Data Visualization & Development Architect</div><div class=profile-company><i class="fas fa-fw fa-building"></i>IE University & Analyticalways</div><div class=profile-location><i class="fas fa-fw fa-map-marker-alt"></i>Alonsotegi</div><div class=profile-about><i class="fas fa-fw fa-user"></i><a href=/es/about/>About</a></div></div>
 </div>
 </section>
 <section class="recent-posts row card component">
 <div class=card-body>
 <h2 class=card-title>Recent Posts</h2>
-<ul></ul>
+<ul><li><a href=/es/posts/data-storytelling/>Data Storytelling With Power BI
+</a></li><li><a href=/es/posts/data-visualization/>Data Visualization With Power BI
+</a></li><li><a href=/es/posts/joincsv/>JoinCsv
+</a></li></ul>
+</div>
+</section><section class="taxonomies row card component">
+<div class=card-body>
+<h2 class=card-title>
+<a href=/es/categories>Categories</a>
+</h2>
+<div><a href=/es/categories/conferences/ class="badge bg-primary text-white rounded post-taxonomy" title=Conferences>
+Conferences
+</a><a href=/es/categories/proyectos-personales/ class="badge bg-primary text-white rounded post-taxonomy" title="Proyectos Personales">
+Proyectos Personales
+</a></div>
+</div>
+</section><section class="taxonomies row card component">
+<div class=card-body>
+<h2 class=card-title>
+<a href=/es/tags>Tags</a>
+</h2>
+<div><a href=/es/tags/data/ class="badge bg-primary text-white rounded post-taxonomy" title=Data>
+Data
+</a><a href=/es/tags/power-bi/ class="badge bg-primary text-white rounded post-taxonomy" title="Power BI">
+Power BI
+</a><a href=/es/tags/csv/ class="badge bg-primary text-white rounded post-taxonomy" title=CSV>
+CSV
+</a><a href=/es/tags/data-visualization/ class="badge bg-primary text-white rounded post-taxonomy" title="Data Visualization">
+Data Visualization
+</a><a href=/es/tags/python/ class="badge bg-primary text-white rounded post-taxonomy" title=Python>
+Python
+</a><a href=/es/tags/storytelling/ class="badge bg-primary text-white rounded post-taxonomy" title=Storytelling>
+Storytelling
+</a><a href=/es/tags/utilidades/ class="badge bg-primary text-white rounded post-taxonomy" title=Utilidades>
+Utilidades
+</a></div>
 </div>
 </section>
 </div>
