--- a/es/series/index.html
+++ b/es/series/index.html
@@ -113,7 +113,23 @@ Spanish
 <input class="form-control rounded-pill" name=q type=search aria-label=Search>
 </div>
 </form>
-<ul class="navbar-nav ms-auto"><li class="nav-item dropdown">
+<ul class="navbar-nav ms-auto"><li class=nav-item>
+<a class=nav-link href=/es/archives/>
+<i class="fas fa-fw fa-file-archive"></i>Archives
+</a>
+</li><li class=nav-item>
+<a class=nav-link href=/es/categories/>
+<i class="fas fa-fw fa-folder"></i>Categories
+</a>
+</li><li class=nav-item>
+<a class=nav-link href=/es/tags/>
+<i class="fas fa-fw fa-tags"></i>Tags
+</a>
+</li><li class=nav-item>
+<a class="nav-link active" href=/es/series/>
+<i class="fas fa-fw fa-columns"></i>Series
+</a>
+</li><li class="nav-item dropdown">
 <a class=nav-link id=navbarDropdown-dropdown role=button data-bs-toggle=dropdown aria-expanded=false>
 <i class="fas fa-fw fa-chevron-circle-down"></i>Dropdown
 </a>
@@ -142,13 +158,48 @@ Spanish
 <div class=card-body>
 <div class="col-12 d-flex align-items-center justify-content-center"><img class="profile-avatar rounded-circle" alt="Francisco Cruzado Perni" src=/images/profile.webp loading=lazy width=400 height=400>
 </div>
-<div class="col-12 profile-meta"><div class=profile-name>Francisco Cruzado Perni</div><div class=profile-bio>Associate Professor in Data Visualization & Development Architect</div><div class=profile-company><i class="fas fa-fw fa-building"></i>IE University & Analyticalways</div><div class=profile-location><i class="fas fa-fw fa-map-marker-alt"></i>Alonsotegi</div></div>
+<div class="col-12 profile-meta"><div class=profile-name>Francisco Cruzado Perni</div><div class=profile-bio>Associate Professor in Data Visualization & Development Architect</div><div class=profile-company><i class="fas fa-fw fa-building"></i>IE University & Analyticalways</div><div class=profile-location><i class="fas fa-fw fa-map-marker-alt"></i>Alonsotegi</div><div class=profile-about><i class="fas fa-fw fa-user"></i><a href=/es/about/>About</a></div></div>
 </div>
 </section>
 <section class="recent-posts row card component">
 <div class=card-body>
 <h2 class=card-title>Recent Posts</h2>
-<ul></ul>
+<ul><li><a href=/es/posts/data-storytelling/>Data Storytelling With Power BI
+</a></li><li><a href=/es/posts/data-visualization/>Data Visualization With Power BI
+</a></li><li><a href=/es/posts/joincsv/>JoinCsv
+</a></li></ul>
+</div>
+</section><section class="taxonomies row card component">
+<div class=card-body>
+<h2 class=card-title>
+<a href=/es/categories>Categories</a>
+</h2>
+<div><a href=/es/categories/conferences/ class="badge bg-primary text-white rounded post-taxonomy" title=Conferences>
+Conferences
+</a><a href=/es/categories/proyectos-personales/ class="badge bg-primary text-white rounded post-taxonomy" title="Proyectos Personales">
+Proyectos Personales
+</a></div>
+</div>
+</section><section class="taxonomies row card component">
+<div class=card-body>
+<h2 class=card-title>
+<a href=/es/tags>Tags</a>
+</h2>
+<div><a href=/es/tags/data/ class="badge bg-primary text-white rounded post-taxonomy" title=Data>
+Data
+</a><a href=/es/tags/power-bi/ class="badge bg-primary text-white rounded post-taxonomy" title="Power BI">
+Power BI
+</a><a href=/es/tags/csv/ class="badge bg-primary text-white rounded post-taxonomy" title=CSV>
+CSV
+</a><a href=/es/tags/data-visualization/ class="badge bg-primary text-white rounded post-taxonomy" title="Data Visualization">
+Data Visualization
+</a><a href=/es/tags/python/ class="badge bg-primary text-white rounded post-taxonomy" title=Python>
+Python
+</a><a href=/es/tags/storytelling/ class="badge bg-primary text-white rounded post-taxonomy" title=Storytelling>
+Storytelling
+</a><a href=/es/tags/utilidades/ class="badge bg-primary text-white rounded post-taxonomy" title=Utilidades>
+Utilidades
+</a></div>
 </div>
 </section>
 </div>
