deploy: fcperni/blog@bd05db4bf5e6a2bcd81884aac8e6488504495511

--- a/es/404.html
+++ b/es/404.html
@@ -62,7 +62,7 @@
 <div class="col-auto ms-auto">
 <div class=dropdown>
 <a class="btn btn-sm btn-outline-primary dropdown-toggle" href=# id=languageDropdown role=button data-bs-toggle=dropdown aria-expanded=false>
-Spanish
+Español
 </a>
 <ul class="dropdown-menu dropdown-menu-end" aria-labelledby=languageDropdown><li><a class=dropdown-item href=/>English</a></li></ul>
 </div>
@@ -115,15 +115,15 @@ Spanish
 </form>
 <ul class="navbar-nav ms-auto"><li class=nav-item>
 <a class=nav-link href=/es/archives/>
-<i class="fas fa-fw fa-file-archive"></i>Archives
+<i class="fas fa-fw fa-file-archive"></i>Archivos
 </a>
 </li><li class=nav-item>
 <a class=nav-link href=/es/categories/>
-<i class="fas fa-fw fa-folder"></i>Categories
+<i class="fas fa-fw fa-folder"></i>Categorias
 </a>
 </li><li class=nav-item>
 <a class=nav-link href=/es/tags/>
-<i class="fas fa-fw fa-tags"></i>Tags
+<i class="fas fa-fw fa-tags"></i>Etiquetas
 </a>
 </li><li class=nav-item>
 <a class=nav-link href=/es/series/>
