--- a/es/search/index.html
+++ b/es/search/index.html
@@ -2,19 +2,19 @@
 <head>
 <meta charset=utf-8>
 <meta name=viewport content="width=device-width,initial-scale=1">
-<title>Search - Francisco Cruzado Perni</title><link rel=apple-touch-icon href=/images/favicons/apple-touch-icon.png sizes=180x180>
+<title>Buscador - Francisco Cruzado Perni</title><link rel=apple-touch-icon href=/images/favicons/apple-touch-icon.png sizes=180x180>
 <link rel=icon href=/images/favicons/favicon-32x32.png sizes=32x32 type=image/png>
 <link rel=icon href=/images/favicons/favicon-16x16.png sizes=16x16 type=image/png>
 <link rel=manifest href=/images/favicons/manifest.json>
 <link rel=icon href=/images/favicons/favicon.ico>
 <meta name=keywords content="Francisco Cruzado Perni,Desarrollo,Visualización de Datos,Blog">
-<meta name=description content="El blog de Francisco Cruzado Perni blog"><meta itemprop=name content="Search">
-<meta itemprop=description content="El blog de Francisco Cruzado Perni blog"><meta property="og:title" content="Search">
+<meta name=description content="El blog de Francisco Cruzado Perni blog"><meta itemprop=name content="Buscador">
+<meta itemprop=description content="El blog de Francisco Cruzado Perni blog"><meta property="og:title" content="Buscador">
 <meta property="og:description" content="El blog de Francisco Cruzado Perni blog">
 <meta property="og:type" content="website">
 <meta property="og:url" content="/es/search/">
 <meta name=twitter:card content="summary">
-<meta name=twitter:title content="Search">
+<meta name=twitter:title content="Buscador">
 <meta name=twitter:description content="El blog de Francisco Cruzado Perni blog">
 <meta name=twitter:site content="@ocoloco">
 <link rel=alternate type=application/rss+xml href=/es/search/index.xml title="Francisco Cruzado Perni"><meta data-name=search-index content="/es/index.json"><link rel=preload href=/css/bundle.min.56f818f19e58c97481c8333650e24bf131abfada62c954646a72ae940adb3bf5.css integrity="sha256-VvgY8Z5YyXSByDM2UOJL8TGr+tpiyVRkanKulArbO/U=" crossorigin=anonymous as=style onload="this.rel='stylesheet'">
@@ -37,7 +37,7 @@
 </button>
 </div>
 <div class=offcanvas-body>
-<a class="btn btn-sm btn-outline-primary social-share-button" rel="noopener noreferrer" aria-label="Twitter Share Button" target=_blank href="https://twitter.com/intent/tweet?title=Search&url=%2fes%2fsearch%2f">
+<a class="btn btn-sm btn-outline-primary social-share-button" rel="noopener noreferrer" aria-label="Twitter Share Button" target=_blank href="https://twitter.com/intent/tweet?title=Buscador&url=%2fes%2fsearch%2f">
 <i class="fab fa-fw fa-twitter"></i> Twitter
 </a>
 <a class="btn btn-sm btn-outline-primary social-share-button" rel="noopener noreferrer" aria-label="Facebook Share Button" target=_blank href="https://www.facebook.com/sharer/sharer.php?u=%2fes%2fsearch%2f">
@@ -63,7 +63,7 @@
 <div class="col-auto ms-auto">
 <div class=dropdown>
 <a class="btn btn-sm btn-outline-primary dropdown-toggle" href=# id=languageDropdown role=button data-bs-toggle=dropdown aria-expanded=false>
-Spanish
+Español
 </a>
 <ul class="dropdown-menu dropdown-menu-end" aria-labelledby=languageDropdown><li><a class=dropdown-item href=/>English</a></li></ul>
 </div>
@@ -116,15 +116,15 @@ Spanish
 </form>
 <ul class="navbar-nav ms-auto"><li class=nav-item>
 <a class=nav-link href=/es/archives/>
-<i class="fas fa-fw fa-file-archive"></i>Archives
+<i class="fas fa-fw fa-file-archive"></i>Archivos
 </a>
 </li><li class=nav-item>
 <a class=nav-link href=/es/categories/>
-<i class="fas fa-fw fa-folder"></i>Categories
+<i class="fas fa-fw fa-folder"></i>Categorias
 </a>
 </li><li class=nav-item>
 <a class=nav-link href=/es/tags/>
-<i class="fas fa-fw fa-tags"></i>Tags
+<i class="fas fa-fw fa-tags"></i>Etiquetas
 </a>
 </li><li class=nav-item>
 <a class=nav-link href=/es/series/>
