--- a/es/series/index.html
+++ b/es/series/index.html
@@ -62,7 +62,7 @@
 <div class="col-auto ms-auto">
 <div class=dropdown>
 <a class="btn btn-sm btn-outline-primary dropdown-toggle" href=# id=languageDropdown role=button data-bs-toggle=dropdown aria-expanded=false>
-Spanish
+Español
 </a>
 <ul class="dropdown-menu dropdown-menu-end" aria-labelledby=languageDropdown><li><a class=dropdown-item href=/>English</a></li></ul>
 </div>
@@ -115,15 +115,15 @@ Spanish
 </form>
 <ul class="navbar-nav ms-auto"><li class=nav-item>
 <a class=nav-link href=/es/archives/>
-<i class="fas fa-fw fa-file-archive"></i>Archives
+<i class="fas fa-fw fa-file-archive"></i>Archivos
 </a>
 </li><li class=nav-item>
 <a class=nav-link href=/es/categories/>
-<i class="fas fa-fw fa-folder"></i>Categories
+<i class="fas fa-fw fa-folder"></i>Categorias
 </a>
 </li><li class=nav-item>
 <a class=nav-link href=/es/tags/>
-<i class="fas fa-fw fa-tags"></i>Tags
+<i class="fas fa-fw fa-tags"></i>Etiquetas
 </a>
 </li><li class=nav-item>
 <a class="nav-link active" href=/es/series/>
@@ -158,7 +158,7 @@ Spanish
 <div class=card-body>
 <div class="col-12 d-flex align-items-center justify-content-center"><img class="profile-avatar rounded-circle" alt="Francisco Cruzado Perni" src=/images/profile.webp loading=lazy width=400 height=400>
 </div>
-<div class="col-12 profile-meta"><div class=profile-name>Francisco Cruzado Perni</div><div class=profile-bio>Associate Professor in Data Visualization & Development Architect</div><div class=profile-company><i class="fas fa-fw fa-building"></i>IE University & Analyticalways</div><div class=profile-location><i class="fas fa-fw fa-map-marker-alt"></i>Alonsotegi</div><div class=profile-about><i class="fas fa-fw fa-user"></i><a href=/es/about/>About</a></div></div>
+<div class="col-12 profile-meta"><div class=profile-name>Francisco Cruzado Perni</div><div class=profile-bio>Associate Professor in Data Visualization & Development Architect</div><div class=profile-company><i class="fas fa-fw fa-building"></i>IE University & Analyticalways</div><div class=profile-location><i class="fas fa-fw fa-map-marker-alt"></i>Alonsotegi</div><div class=profile-about><i class="fas fa-fw fa-user"></i><a href=/es/about/>Sobre mí</a></div></div>
 </div>
 </section>
 <section class="recent-posts row card component">
