--- a/search/index.html
+++ b/search/index.html
@@ -65,7 +65,7 @@
 <a class="btn btn-sm btn-outline-primary dropdown-toggle" href=# id=languageDropdown role=button data-bs-toggle=dropdown aria-expanded=false>
 English
 </a>
-<ul class="dropdown-menu dropdown-menu-end" aria-labelledby=languageDropdown><li><a class=dropdown-item href=/es/>Spanish</a></li></ul>
+<ul class="dropdown-menu dropdown-menu-end" aria-labelledby=languageDropdown><li><a class=dropdown-item href=/es/>Español</a></li></ul>
 </div>
 </div>
 </form>
