deploy: fcperni/blog@6c063a778b130aabebaefd60c9c2d876fd8b62c0

--- a/es/about/index.html
+++ b/es/about/index.html
@@ -2,7 +2,6 @@
 <head>
 <meta charset=utf-8>
 <meta name=viewport content="width=device-width,initial-scale=1">
-<script type=application/javascript>var doNotTrack=!1;doNotTrack||(function(a,e,f,g,b,c,d){a.GoogleAnalyticsObject=b,a[b]=a[b]||function(){(a[b].q=a[b].q||[]).push(arguments)},a[b].l=1*new Date,c=e.createElement(f),d=e.getElementsByTagName(f)[0],c.async=1,c.src=g,d.parentNode.insertBefore(c,d)}(window,document,'script','https://www.google-analytics.com/analytics.js','ga'),ga('create','UA-140888268-1','auto'),ga('send','pageview'))</script>
 <title>Sobre mí - Francisco Cruzado Perni</title><link rel=apple-touch-icon href=/images/favicons/apple-touch-icon.png sizes=180x180>
 <link rel=icon href=/images/favicons/favicon-32x32.png sizes=32x32 type=image/png>
 <link rel=icon href=/images/favicons/favicon-16x16.png sizes=16x16 type=image/png>
@@ -125,7 +124,7 @@ Español
 </a>
 </li><li class=nav-item>
 <a class=nav-link href=/es/categories/>
-<i class="fas fa-fw fa-folder"></i>Categorias
+<i class="fas fa-fw fa-folder"></i>Categorías
 </a>
 </li><li class=nav-item>
 <a class=nav-link href=/es/tags/>
@@ -137,11 +136,15 @@ Español
 </a>
 </li><li class="nav-item dropdown">
 <a class=nav-link id=navbarDropdown-dropdown role=button data-bs-toggle=dropdown aria-expanded=false>
-<i class="fas fa-fw fa-chevron-circle-down"></i>Dropdown
+<i class="fas fa-fw fa-chevron-circle-down"></i>Sitios externos
 </a>
 <ul class=dropdown-menu aria-labelledby=navbarDropdown-dropdown><li>
 <a class=dropdown-item href=https://github.com/fcperni/ target=_blank rel="noopener noreferrer">
 <i class="fab fa-fw fa-github"></i>Github
+</a>
+</li><li>
+<a class=dropdown-item href=https://sessionize.com/francisco-cruzado-perni/ target=_blank rel="noopener noreferrer">
+<i class="fab fa-fw"></i>Sessionize
 </a>
 </li></ul>
 </li></ul>
@@ -202,7 +205,7 @@ Español
 <div class=card-body>
 <div class="col-12 d-flex align-items-center justify-content-center"><img class="profile-avatar rounded-circle" alt="Francisco Cruzado Perni" src=/images/profile.webp loading=lazy width=400 height=400>
 </div>
-<div class="col-12 profile-meta"><div class=profile-name>Francisco Cruzado Perni</div><div class=profile-bio>Associate Professor in Data Visualization & Development Architect</div><div class=profile-company><i class="fas fa-fw fa-building"></i>IE University & Analyticalways</div><div class=profile-location><i class="fas fa-fw fa-map-marker-alt"></i>Alonsotegi</div><div class=profile-about><i class="fas fa-fw fa-user"></i><a href=/es/about/>Sobre mí</a></div></div>
+<div class="col-12 profile-meta"><div class=profile-name>Francisco Cruzado Perni</div><div class=profile-bio>Associate Professor in Data Visualization & Development Architect</div><div class=profile-company><i class="fas fa-fw fa-building"></i>IE University & Analyticalways</div><div class=profile-location><i class="fas fa-fw fa-map-marker-alt"></i>Alonsotegi, Bizkaia</div><div class=profile-about><i class="fas fa-fw fa-user"></i><a href=/es/about/>Sobre mí</a></div></div>
 </div>
 </section>
 <section class="recent-posts row card component">
@@ -265,7 +268,5 @@ Copyright © 2016-2021. All Rights Reserved.
 Powered by <a href=https://gohugo.io target=_blank rel="noopener noreferrer">Hugo</a> and the <a href=https://github.com/razonyang/hugo-theme-bootstrap target=_blank rel="noopener noreferrer">Bootstrap</a> theme.
 </div></footer>
 <script src=/js/bundle.min.1f63278219b42b88861610ffaa2311d5551098031be3715ff1f0473a20b05625.js integrity="sha256-H2Mnghm0K4iGFhD/qiMR1VUQmAMb43Ff8fBHOiCwViU=" crossorigin=anonymous defer></script><script defer src=/js/viewer.min.2f6511f1e2b87cdacb7bdeedeadc1dcf2fc9f22db69f89b70fd5d91224f892a4.js integrity="sha256-L2UR8eK4fNrLe97t6twdzy/J8i22n4m3D9XZEiT4kqQ=" crossorigin=anonymous></script>
-<script type=application/javascript>var doNotTrack=!1;doNotTrack||(window.ga=window.ga||function(){(ga.q=ga.q||[]).push(arguments)},ga.l=+new Date,ga('create','UA-140888268-1','auto'),ga('send','pageview'))</script>
-<script async src=https://www.google-analytics.com/analytics.js></script>
 </body>
 </html>
