deploy: fcperni/blog@3ad7d0ff891d8231c9c83de909085c44edcf49da

--- a/404.html
+++ b/404.html
@@ -139,7 +139,7 @@ English
 </a>
 </li><li>
 <a class=dropdown-item href=https://sessionize.com/francisco-cruzado-perni/ target=_blank rel="noopener noreferrer">
-<i class="fab fa-fw fa-megaphone"></i>Sessionize
+<i class="fab fa-fw fa-github"></i>Sessionize
 </a>
 </li></ul>
 </li></ul>
