--- a/about/index.html
+++ b/about/index.html
@@ -144,7 +144,7 @@ English
 </a>
 </li><li>
 <a class=dropdown-item href=https://sessionize.com/francisco-cruzado-perni/ target=_blank rel="noopener noreferrer">
-<i class="fab fa-fw fa-megaphone"></i>Sessionize
+<i class="fab fa-fw fa-github"></i>Sessionize
 </a>
 </li></ul>
 </li></ul>
@@ -201,11 +201,17 @@ English
 <div class="col-12 profile-meta"><div class=profile-name>Francisco Cruzado Perni</div><div class=profile-bio>Associate Professor in Data Visualization & Development Architect</div><div class=profile-company><i class="fas fa-fw fa-building"></i>IE University & Analyticalways</div><div class=profile-location><i class="fas fa-fw fa-map-marker-alt"></i>Alonsotegi, Bizkaia, Spain</div><div class=profile-about><i class="fas fa-fw fa-user"></i><a href=/about/>About</a></div></div>
 </div>
 </section>
-<section class="recent-posts row card component">
+<section class="featured-posts row card component">
+<div class=card-body>
+<h2 class=card-title>Featured Posts</h2>
+<ul><li><a href=/posts/data-storytelling/>Data Storytelling with Power BI
+</a></li></ul>
+</div>
+</section><section class="recent-posts row card component">
 <div class=card-body>
 <h2 class=card-title>Recent Posts</h2>
-<ul><li><a href=/posts/data-storytelling/>Data Storytelling With Power BI
-</a></li><li><a href=/posts/data-visualization/>Data Visualization With Power BI
+<ul><li><a href=/posts/data-storytelling/>Data Storytelling with Power BI
+</a></li><li><a href=/posts/data-visualization/>Data Visualization with Power BI
 </a></li><li><a href=/posts/joincsv/>JoinCsv
 </a></li></ul>
 </div>
