--- a/es/search/index.html
+++ b/es/search/index.html
@@ -31,7 +31,7 @@
 </button>
 <div class="offcanvas offcanvas-bottom surface" tabindex=-1 id=offcanvasSocialShare aria-labelledby=offcanvasSocialShare>
 <div class=offcanvas-header>
-<h3 class=offcanvas-title>Share</h3>
+<h3 class=offcanvas-title>Compartir</h3>
 <button type=button class="btn btn-sm btn-outline-primary" data-bs-dismiss=offcanvas aria-label=Close>
 <i class="fas fa-times"></i>
 </button>
@@ -50,7 +50,7 @@
 </button>
 <div class="offcanvas offcanvas-end surface h-100" tabindex=-1 id=offcanvasSettings aria-labelledby=offcanvasSettings>
 <div class=offcanvas-header>
-<h3 class=offcanvas-title>Settings</h3>
+<h3 class=offcanvas-title>Configuración</h3>
 <button type=button class="btn btn-sm btn-outline-primary" data-bs-dismiss=offcanvas aria-label=Close>
 <i class="fas fa-times"></i>
 </button>
@@ -58,7 +58,7 @@
 <div class=offcanvas-body><section class=setting>
 <form class=row>
 <div class=col-auto>
-<label for=fontSize class=form-label><i class="fas fa-fw fa-language"></i> Language</label>
+<label for=fontSize class=form-label><i class="fas fa-fw fa-language"></i> Idioma</label>
 </div>
 <div class="col-auto ms-auto">
 <div class=dropdown>
@@ -73,7 +73,7 @@ Español
 <section class=setting>
 <form class="font-size-switcher-form row">
 <div class=col-auto>
-<label for=fontSize class=form-label><i class="fas fa-fw fa-font"></i> Font Size</label>
+<label for=fontSize class=form-label><i class="fas fa-fw fa-font"></i> Tamaño de fuente</label>
 </div>
 <div class="col-auto ms-auto">
 <input type=range class=form-range min=-2 max=2 id=fontSize>
@@ -83,7 +83,7 @@ Español
 <section class="setting palettes">
 <form class=row>
 <div class=col-auto>
-<label><i class="fas fa-fw fa-palette"></i> Palette</label>
+<label><i class="fas fa-fw fa-palette"></i> Paleta</label>
 </div>
 <div class="col-auto ms-auto">
 <a id=btnPalette class="btn btn-sm btn-outline-primary" role=button aria-label=palettePicker>
@@ -91,18 +91,18 @@ Español
 </a>
 </div>
 </form>
-<div class="mt-2 d-flex visually-hidden" id=palettePicker><button type=button id=palette-blue aria-label=Blue class="btn btn-sm palette" data-palette=blue>
-</button><button type=button id=palette-blue-gray aria-label="Blue Gray" class="btn btn-sm palette" data-palette=blue-gray>
-</button><button type=button id=palette-brown aria-label=Brown class="btn btn-sm palette" data-palette=brown>
+<div class="mt-2 d-flex visually-hidden" id=palettePicker><button type=button id=palette-blue aria-label=Azul class="btn btn-sm palette" data-palette=blue>
+</button><button type=button id=palette-blue-gray aria-label="Azul gris" class="btn btn-sm palette" data-palette=blue-gray>
+</button><button type=button id=palette-brown aria-label=Marrón class="btn btn-sm palette" data-palette=brown>
 </button><button type=button id=palette-cyan aria-label=Cyan class="btn btn-sm palette" data-palette=cyan>
-</button><button type=button id=palette-green aria-label=Green class="btn btn-sm palette" data-palette=green>
-</button><button type=button id=palette-indigo aria-label=Indigo class="btn btn-sm palette" data-palette=indigo>
-</button><button type=button id=palette-orange aria-label=Orange class="btn btn-sm palette" data-palette=orange>
-</button><button type=button id=palette-pink aria-label=Pink class="btn btn-sm palette" data-palette=pink>
-</button><button type=button id=palette-purple aria-label=Purple class="btn btn-sm palette" data-palette=purple>
-</button><button type=button id=palette-red aria-label=Red class="btn btn-sm palette" data-palette=red>
-</button><button type=button id=palette-teal aria-label=Teal class="btn btn-sm palette" data-palette=teal>
-</button><button type=button id=palette-yellow aria-label=Yellow class="btn btn-sm palette" data-palette=yellow>
+</button><button type=button id=palette-green aria-label=Verde class="btn btn-sm palette" data-palette=green>
+</button><button type=button id=palette-indigo aria-label=Índigo class="btn btn-sm palette" data-palette=indigo>
+</button><button type=button id=palette-orange aria-label=Naranja class="btn btn-sm palette" data-palette=orange>
+</button><button type=button id=palette-pink aria-label=Rosa class="btn btn-sm palette" data-palette=pink>
+</button><button type=button id=palette-purple aria-label=Morado class="btn btn-sm palette" data-palette=purple>
+</button><button type=button id=palette-red aria-label=Rojo class="btn btn-sm palette" data-palette=red>
+</button><button type=button id=palette-teal aria-label=Tilo class="btn btn-sm palette" data-palette=teal>
+</button><button type=button id=palette-yellow aria-label=Amarillo class="btn btn-sm palette" data-palette=yellow>
 </button></div>
 </section>
 </div>
@@ -140,7 +140,7 @@ Español
 </a>
 </li><li>
 <a class=dropdown-item href=https://sessionize.com/francisco-cruzado-perni/ target=_blank rel="noopener noreferrer">
-<i class="fab fa-fw"></i>Sessionize
+<i class="fab fa-fw fa-github"></i>Sessionize
 </a>
 </li></ul>
 </li></ul>
@@ -167,7 +167,7 @@ Español
 </div>
 <div id=searchResults class="search-results container mb-3"></div>
 <div class="text-center mb-3">
-<button class="btn btn-block btn-outline-primary d-none" type=button id=btnLoadMore>Load More</button>
+<button class="btn btn-block btn-outline-primary d-none" type=button id=btnLoadMore>Cargar más</button>
 </div>
 </div>
 <script type=text/html id=templateResult><div class="search-result row card component" id={{id}}>
@@ -186,9 +186,9 @@ Español
 <div class="search-result-content mb-3">{{{#img}}}<img src={{{img}}}>{{{/img}}}{{{content}}}</div>
 </div>
 </div></script>
-<script type=text/html id=templateMissingKeywords>Please enter search keywords</script>
-<script type=text/html id=templateNoResults>No results found</script>
-<script type=text/html id=templateStat>Found <span class=text-accent>{{total}}</span> results</script>
+<script type=text/html id=templateMissingKeywords>Por favor introduzca palabras para buscar</script>
+<script type=text/html id=templateNoResults>No se encontraron resultados</script>
+<script type=text/html id=templateStat>Encontrados <span class=text-accent>{{total}}</span> resultados</script>
 </div>
 </main><footer class="footer mt-auto py-3 text-center container"><nav class="social-links nav my-2 justify-content-center"><a class="nav-link social-link" href=mailto:fcperni@gmail.com title=Email>
 <i class="fas fa-fw fa-2x fa-envelope"></i>
