deploy: fcperni/blog@fa2c89d61653c0a63484ec9e9c339ac885b9774f

--- a/about/index.html
+++ b/about/index.html
@@ -206,13 +206,15 @@ English
 <section class="featured-posts row card component">
 <div class=card-body>
 <h2 class=card-title>Featured Posts</h2>
-<ul><li><a href=/posts/data-storytelling/>Data Storytelling with Power BI
+<ul><li><a href=/posts/hugo-blog-with-ga/>Create a Hugo Blog and connect it with Google Analytics
+</a></li><li><a href=/posts/data-storytelling/>Data Storytelling with Power BI
 </a></li></ul>
 </div>
 </section><section class="recent-posts row card component">
 <div class=card-body>
 <h2 class=card-title>Recent Posts</h2>
-<ul><li><a href=/posts/data-storytelling/>Data Storytelling with Power BI
+<ul><li><a href=/posts/hugo-blog-with-ga/>Create a Hugo Blog and connect it with Google Analytics
+</a></li><li><a href=/posts/data-storytelling/>Data Storytelling with Power BI
 </a></li><li><a href=/posts/data-visualization/>Data Visualization with Power BI
 </a></li><li><a href=/posts/joincsv/>JoinCsv
 </a></li></ul>
@@ -237,14 +239,24 @@ Pet Projects
 Data
 </a><a href=/tags/power-bi/ class="badge bg-primary text-white rounded post-taxonomy" title="Power BI">
 Power BI
+</a><a href=/tags/blog/ class="badge bg-primary text-white rounded post-taxonomy" title=Blog>
+Blog
 </a><a href=/tags/csv/ class="badge bg-primary text-white rounded post-taxonomy" title=CSV>
 CSV
 </a><a href=/tags/data-visualization/ class="badge bg-primary text-white rounded post-taxonomy" title="Data Visualization">
 Data Visualization
+</a><a href=/tags/github/ class="badge bg-primary text-white rounded post-taxonomy" title=GitHub>
+GitHub
+</a><a href=/tags/google-analytics/ class="badge bg-primary text-white rounded post-taxonomy" title="Google Analytics">
+Google Analytics
+</a><a href=/tags/hugo/ class="badge bg-primary text-white rounded post-taxonomy" title=Hugo>
+Hugo
 </a><a href=/tags/python/ class="badge bg-primary text-white rounded post-taxonomy" title=Python>
 Python
 </a><a href=/tags/storytelling/ class="badge bg-primary text-white rounded post-taxonomy" title=Storytelling>
 Storytelling
+</a><a href=/tags/tableau/ class="badge bg-primary text-white rounded post-taxonomy" title=Tableau>
+Tableau
 </a><a href=/tags/utilities/ class="badge bg-primary text-white rounded post-taxonomy" title=Utilities>
 Utilities
 </a></div>
